--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Sistema de Facturacion",
   "main": "servidor.js",
   "scripts": {
+	"start": "nodemon servidor.js"
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Guillermo Pizarro",
