Arreglo error , package.json

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sistema de Facturacion",
   "main": "servidor.js",
   "scripts": {
-	"start": "nodemon servidor.js"
+	"start": "nodemon servidor.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Guillermo Pizarro",
