--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Sistema de Facturacion",
   "main": "servidor.js",
   "scripts": {
-	"start": "nodemon servidor.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+	"start": "nodemon servidor.js"
   },
   "author": "Guillermo Pizarro",
   "license": "GPL-3.0",
