--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
 	"start": "node servidor.js"
   },
-  "author": "Guillermo Pizarro",
+  "author": "Isaac OB",
   "license": "GPL-3.0",
   "dependencies": {
     "body-parser": "^1.19.0",
